--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -4,13 +4,14 @@ $grey: #9e9e9e;
 $grey-dark: #263238;
 $white: #ffffff;
 $green: #26a69a;
+$green-light: #0cd40c;
 $blue: #0067b8;
 $blue-dark: #253e68;
 $blue-light: #9FE7F9;
 $red: #F44336;
 
 
-
+//Colors
 $background-color: $grey-dark;
 $text-color: $white;
 $bold-text-color: $white;
@@ -19,3 +20,5 @@ $border-element-color: $grey;
 $icons-color: $green;
 $icons-hover-color: $blue-light;
 $icons-close-color: $red;
+//Graphical default
+$border-radius: 0px;
